fixed left alignment of images on location.html

--- a/assets/css/location.css
+++ b/assets/css/location.css
@@ -1,6 +1,13 @@
 .photo{
-    border-radius: 8px;
-    /* border: 1px solid #ddd; */
+    margin-left:2%;
+    float:left; 
+    width:40%;
+    height: 350px;
     padding: 5px;
-    width: 200px;
+    border-radius: 20px;
+    } 
+.container{
+    width:100%;
+    height:auto;
+    padding:10px;
 }
